# kyouth-data-ai-project

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_phase1_schema.py
backend/app/: db.py  main.py  models.py  parsers.py  recovery.py  review_policy.py  schema_maintenance.py  schemas.py  tasks.py  worker.py
backend/app/ai/: base.py  controls.py  factory.py  json_utils.py  prompts.py  providers.py  service.py
backend/app/api/: ai.py  dashboard.py  debug.py  documents.py  extractions.py  jobs.py  system.py  templates.py
backend/app/document_templates/: bank_statement_finance.json  invoice_finance.json  progress_claim_construction.json  purchase_order_construction.json
backend/app/scripts/: adopt_existing_schema.py  requeue_pending_jobs.py
backend/app/services/: document_service.py  job_recovery_service.py  review_service.py  startup_service.py  template_extraction_service.py  template_service.py  validation_service.py
frontend/: .env.local.example  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuditTimeline.tsx  DashboardOverview.tsx  DocumentPreview.tsx  DocumentsTable.tsx  UploadCard.tsx
frontend/lib/: documentReview.ts  format.ts  types.ts
samples/: README.md  customers.csv  invoice.txt  races.json  record.json
samples/auto_discovery/: generic_meeting_note.md
samples/construction/: construction_progress_claim.txt  construction_purchase_order.txt
(+11 files in other folders)
