[project]
name = "kyouth-data-ai-project"
version = "0.1.0"
description = "Audit-ready AI document processor"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
  "celery>=5.6.3",
]
