[project]
name = "audit-ready-doc-pipeline"
version = "0.1.0"
description = "Audit-ready AI document processing backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "celery>=5.6.3",
  "redis>=6.2.0",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.15.20",
]
